Implemented GameState logic and JUnit tests