@@ -12,14 +12,20 @@ public final class Snake {
     body = List.copyOf(body);
     this.body = body;
   }
+    private Direction direction;
 
-  public Position head() {
-    return body.getFirst();
-  }
-
+    public Position head() {
+        return body.get(0);
+    }
+    public Direction direction() {
+        return direction;
+    }
   public List<Position> body() {
     return body;
   }
+    public void setDirection(Direction direction) {
+        this.direction = direction;
+    }
 
   public Position nextHead(Direction d) {
     return d.applyTo(head());
@@ -36,4 +42,16 @@ public final class Snake {
     newBody.addAll(body);
     return new Snake(newBody);
   }
+    public Snake move(Direction d) {
+
+        var newHead = nextHead(d);
+
+        var newBody = new ArrayList<Position>();
+
+        newBody.add(newHead);
+
+        newBody.addAll(body);
+
+        return new Snake(newBody);
+    }
 }
